--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ navbar-links:
   Resources:
     - Learn markdown: "https://www.markdowntutorial.com/"
   Author's home: "https://ziadouahmane.com"
-  donate: "/assets/img/monero.png"
+  donate(xmr): "/assets/img/monero.png"
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
@@ -75,7 +75,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "ZO.com"
+url-pretty: "Z.com"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
@@ -131,7 +131,7 @@ mobile-theme-col: "#0085A1"
 #gtag: ""
 
 # Fill in your Google Analytics ID to track your website using Google Analytics
-#google_analytics: ""
+google_analytics: "UA-173570456-1"
 
 # Fill in your Cloudflare Analytics beacon token to track your website using Cloudflare Analytics
 #cloudflare_analytics: ""
