--- a/_config.yml
+++ b/_config.yml
@@ -128,7 +128,16 @@ mobile-theme-col: "#0085A1"
 # --- Web Analytics Section --- #
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-#gtag: ""
+gtag: "<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-173570456-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-173570456-1');
+</script>
+"
 
 # Fill in your Google Analytics ID to track your website using Google Analytics
 google_analytics: "UA-173570456-1"
@@ -231,6 +240,5 @@ plugins:
   - jekyll-sitemap
   - jekyll-seo-tag  
 
-# Beautiful Jekyll / Dean Attali
-# 2fc73a3a967e97599c9763d05e564189
+# Beautiful Jekyll
 
