--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "ziadouahmane.com"
+  email: ziad_ouahmane@protonmail.com
   github: N3r0m5ns3r
   twitter: soli_of
   linkedin: ziad-ouahmane
