--- a/_config.yml
+++ b/_config.yml
@@ -137,11 +137,10 @@ gtag: "<!-- Global site tag (gtag.js) - Google Analytics -->
   gtag('js', new Date());
 
   gtag('config', 'UA-173570456-1');
-</script>
-"
+</script> "
 
 # Fill in your Google Analytics ID to track your website using Google Analytics
-google_analytics: "UA-173570456-1"
+google_analytics: "UA-173570456-1 " 
 
 # Fill in your Cloudflare Analytics beacon token to track your website using Cloudflare Analytics
 #cloudflare_analytics: ""
@@ -182,6 +181,7 @@ google_analytics: "UA-173570456-1"
 # instructions. For any support with staticman please direct questions to staticman and 
 # not to BeautifulJekyll.
 #staticman:
+
 #  repository : # GitHub username/repository eg. "daattali/beautiful-jekyll"
 #  branch     : master # If you're not using `master` branch, then you also need to update the `branch` parameter in `staticman.yml`
 #  endpoint   : # URL of your deployment, with a trailing slash eg. "https://<your-api>/v3/entry/github/"
