--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ navbar-links:
   Resources:
     - Learn markdown: "https://www.markdowntutorial.com/"
     - Basic markdown syntax: "https://www.markdownguide.org/basic-syntax/"
-  Author's home: "https://ziadouahmane.com"
+  Author's home: "/assets/img/sahara.jpeg"
   donate(xmr): "/assets/img/monero.png"
 # --- Logo --- #
 
