--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@
 # the initial set up you won't need to come back to this file often.
 
 # --- Required options --- #
+#icon
+icon: "/assets/img/z.ico"
 
 # Name of website
 title: 93
