--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,7 @@
 # the initial set up you won't need to come back to this file often.
 
 # --- Required options --- #
-#icon
-icon: "/assets/img/z.ico"
-
+#
 # Name of website
 title: 93
 
@@ -28,7 +26,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/unnamed.png"
+avatar: "/assets/img/amazigh.jpg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
