--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ navbar-links:
     - Learn markdown: "https://www.markdowntutorial.com/"
     - Basic markdown syntax: "https://www.markdownguide.org/basic-syntax/"
     - Master markdown: "https://guides.github.com/features/mastering-markdown/"
+  projects:
   Author's home: "https://youtu.be/hVvEISFw9w0"
   donate(xmr): "/assets/img/monero.png"
 # --- Logo --- #
