--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ navbar-links:
     - Basic markdown syntax: "https://www.markdownguide.org/basic-syntax/"
     - Master markdown: "https://guides.github.com/features/mastering-markdown/"
   projects:
-  Author's home: "https://youtu.be/hVvEISFw9w0"
-  donate(xmr): "/assets/img/monero.png"
+  #Author's home: "https://youtu.be/hVvEISFw9w0"
+  #donate(xmr): "/assets/img/monero.png"
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
