--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,14 @@ navbar-links:
     - Basic markdown syntax: "https://www.markdownguide.org/basic-syntax/"
     - Master markdown: "https://guides.github.com/features/mastering-markdown/"
   projects:
+    - Codecademy wevdev path: "https://github.com/N3r0m5ns3r/codecademy-webdev-path/"
   #Author's home: "https://youtu.be/hVvEISFw9w0"
   #donate(xmr): "/assets/img/monero.png"
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/free.jpg"
+avatar: "/assets/img/avatar.jpg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
