--- a/_config.yml
+++ b/_config.yml
@@ -101,19 +101,20 @@ post_search: true
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EAEAEA"
-navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
-page-col: "#FFFFFF"
-text-col: "#404040"
-link-col: "#008AFF"
-hover-col: "#0085A1"
-footer-col: "#EAEAEA"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
+#navbar-col: "#eaeaea"
+#navbar-text-col: "#404040"
+#navbar-border-col: "#dddddd"
+#page-col: "#ffffff"
+#text-col: "#404040"
+#link-col: "#008aff"
+#hover-col: "#0085a1"
+#footer-col: "#eaeaea"
+#footer-text-col: "#777777"
+#footer-link-col: "#404040"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
+
 
 navbar-img: "/assets/img/coolback.jpeg"
 footer-img: "/assets/img/coolback.jpeg"
