--- a/_config.yml
+++ b/_config.yml
@@ -115,10 +115,9 @@ post_search: true
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
-
-navbar-img: "/assets/img/coolback.jpeg"
-footer-img: "/assets/img/coolback.jpeg"
-page-img: "/assets/img/coolback.jpeg"
+navbar-img: "/assets/img/josh-bean-medium-9501ba9f.jpg"
+footer-img: "/assets/img/josh-bean-medium-9501ba9f.jpg"
+page-img: "/assets/img/josh-bean-medium-9501ba9f.jpg"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 mobile-theme-col: "#0085A1"
