--- a/_config.yml
+++ b/_config.yml
@@ -103,11 +103,11 @@ post_search: true
 
 #navbar-col: "#eaeaea"
 navbar-text-col: "#404040"
-navbar-border-col: "#dddddd"
-#page-col: "#ffffff"
-#text-col: "#404040"
-#link-col: "#008aff"
-#hover-col: "#0085a1"
+navbar-border-col: "#3987c9"
+page-col: "#3987c9"
+text-col: "#404040"
+link-col: "#3987c9"
+hover-col: "#0085a1"
 #footer-col: "#eaeaea"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
