--- a/_config.yml
+++ b/_config.yml
@@ -103,10 +103,10 @@ post_search: true
 
 #navbar-col: "#eaeaea"
 navbar-text-col: "#404040"
-navbar-border-col: "#3987c9"
-page-col: "#3987c9"
+navbar-border-col: "#ffffff"
+#page-col: "#ffffff"
 text-col: "#404040"
-link-col: "#3987c9"
+link-col: "#000000"
 hover-col: "#0085a1"
 #footer-col: "#eaeaea"
 footer-text-col: "#777777"
@@ -115,9 +115,9 @@ footer-link-col: "#404040"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
-navbar-img: "/assets/img/josh-bean-medium-9501ba9f.jpg"
-footer-img: "/assets/img/josh-bean-medium-9501ba9f.jpg"
-#page-img: "/assets/img/josh-bean-medium-9501ba9f.jpg"
+navbar-img: "/assets/img/dark.jpeg"
+footer-img: "/assets/img/dark.jpeg"
+page-img: "/assets/img/dark.jpeg"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 mobile-theme-col: "#0085A1"
