--- a/_config.yml
+++ b/_config.yml
@@ -105,13 +105,12 @@ post_search: true
 navbar-text-col: "#404040"
 navbar-border-col: "#ffffff"
 #page-col: "#ffffff"
-text-col: "#404040"
+text-col: "#FFFFFF"
 link-col: "#000000"
-hover-col: "#0085a1"
+hover-col: "#000000"
 #footer-col: "#eaeaea"
 footer-text-col: "#777777"
-footer-link-col: "#404040"
-
+footer-link-col: "#FFFFFF"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
