--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ link-col: "#000000"
 hover-col: "#000000"
 #footer-col: "#eaeaea"
 footer-text-col: "#777777"
-footer-link-col: "#FFFFFF"
+footer-link-col: "#404040"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
