--- a/_config.yml
+++ b/_config.yml
@@ -103,11 +103,11 @@ post_search: true
 
 #navbar-col: "#eaeaea"
 navbar-text-col: "#404040"
-navbar-border-col: "#ffffff"
+navbar-border-col: "#000000"
 #page-col: "#ffffff"
 text-col: "#FFFFFF"
 link-col: "#000000"
-hover-col: "#000000"
+hover-col: "#0085A1"
 #footer-col: "#eaeaea"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
