--- a/_config.yml
+++ b/_config.yml
@@ -99,9 +99,9 @@ footer-link-col: "#404040"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
-navbar-img: "/assets/img/dark.jpeg"
-footer-img: "/assets/img/dark.jpeg"
-page-img: "/assets/img/dark.jpeg"
+navbar-img: "/assets/img/blurdark.jpeg"
+footer-img: "/assets/img/blurdark.jpeg"
+page-img: "/assets/img/blurdark.jpeg"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 mobile-theme-col: "#0085A1"
