--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ post_search: true
 #navbar-col: "#eaeaea"
 navbar-text-col: "#404040"
 navbar-border-col: "#000000"
-#page-col: "#ffffff"
+page-col: "#000000"
 text-col: "#FFFFFF"
 link-col: "#000000"
 hover-col: "#0085A1"
@@ -101,7 +101,7 @@ footer-link-col: "#404040"
 
 navbar-img: "/assets/img/blurdark.jpeg"
 footer-img: "/assets/img/blurdark.jpeg"
-page-img: "/assets/img/blurdark.jpeg"
+#page-img: "/assets/img/blurdark.jpeg"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 mobile-theme-col: "#0085A1"
