--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ post_search: true
 
 #navbar-col: "#eaeaea"
 navbar-text-col: "#404040"
-navbar-border-col: "#000000"
+navbar-border-col: "#FFFFFF"
 page-col: "#404040"
 text-col: "#FFFFFF"
 link-col: "#000000"
