--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ post_search: true
 
 navbar-col: "#eaeaea"
 navbar-text-col: "#404040"
-navbar-border-col: "#FFFFFF"
+navbar-border-col: "#000000"
 #navbar-col: "#eaeaea"
 navbar-text-col: "#FFFFFF"
 navbar-border-col: "#000000"
@@ -145,17 +145,17 @@ mobile-theme-col: "#0085A1"
 #staticman:
 
 #  repository : # GitHub username/repository eg. "daattali/beautiful-jekyll"
-#  branch     : master # If you're not using `master` branch, then you also need to update the `branch` parameter in `staticman.yml`
-#  endpoint   : # URL of your deployment, with a trailing slash eg. "https://<your-api>/v3/entry/github/"
-#  reCaptcha:   # (optional, set these parameters in `staticman.yml` as well) 
-#    siteKey  : # You need to apply for a site key on Google
-#    secret   : # Encrypt your password by going to https://<your-own-api>/v3/encrypt/<your-site-secret>
-
-# --- Misc --- #
-
-# Ruby Date Format to show dates of posts
-date_format: "%B %-d, %Y"
-
+<BS>#  branch     : master # If you're not using `master` branch, then you also need to update the `branch` parameter in `staticman.yml`
+<BS>#  endpoint   : # URL of your deployment, with a trailing slash eg. "https://<your-api>/v3/entry/github/"
+<BS>#  reCaptcha:   # (optional, set these parameters in `staticman.yml` as well) 
+<BS>#    siteKey  : # You need to apply for a site key on Google
+<BS>#    secret   : # Encrypt your password by going to https://<your-own-api>/v3/encrypt/<your-site-secret>
+<BS>
+<BS># --- Misc --- #
+<BS>
+<BS># Ruby Date Format to show dates of posts
+<BS>date_format: "%B %-d, %Y"
+<BS>
 # Output options (more information on Jekyll's site)
 timezone: "Europe/Stockholm"
 markdown: kramdown
