--- a/_config.yml
+++ b/_config.yml
@@ -86,12 +86,9 @@ post_search: true
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#eaeaea"
-navbar-text-col: "#404040"
+navbar-col: "#000000"
 navbar-border-col: "#000000"
-#navbar-col: "#eaeaea"
 navbar-text-col: "#FFFFFF"
-navbar-border-col: "#000000"
 page-col: "#404040"
 text-col: "#FFFFFF"
 link-col: "#000000"
